src/com/parser/Parser.java
/* Generated By:JavaCC: Do not edit this line. Parser.java */
package com.parser;
import java.io.FileInputStream;
import java.io.BufferedInputStream;

import nodes.*;

public class Parser implements ParserConstants {
  public static void main(String args []) throws Exception {
    BufferedInputStream stream = new BufferedInputStream(new FileInputStream("newText.txt"));
    new Parser(stream);
    AbstractTreeNode node = start();
    //node.execute(new Context());
        System.out.println(node.convert(new Context()));
  }

  static final public DefNode def() throws ParseException {
  DefNode ret = new DefNode();
  Token t;
    jj_consume_token(DEF);
    t = jj_consume_token(VAR);
                         ret.setVarName(t.image);
    jj_consume_token(COLON);
    t = jj_consume_token(DATA);
    ret.setVarType(t.image);
        {if (true) return ret;}
    throw new Error("Missing return statement in function");
  }

  static final public BlockNode start() throws ParseException {
  BlockNode bnode = new BlockNode();
  AbstractTreeNode n;
  FunctionNode fnode;
  ExpressionNode enode;
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case FUNCTION:
        fnode = Func(null);
        Context.functionMap.put(fnode.getFunctionId(), fnode);
        break;
      case FLOOP:
      case WLOOP:
      case DEF:
      case VAR:
      case IF:
      case READ:
      case WRITE:
        n = Statement();
        bnode.addChild(n);
        break;
      default:
        jj_la1[0] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case FLOOP:
      case WLOOP:
      case FUNCTION:
      case DEF:
      case VAR:
      case IF:
      case READ:
      case WRITE:
        ;
        break;
      default:
        jj_la1[1] = jj_gen;
        break label_1;
      }
    }
    jj_consume_token(0);
    {if (true) return bnode;}
    throw new Error("Missing return statement in function");
  }

  static final public FunctionNode Func(FunctionNode ancestor) throws ParseException {
  FunctionNode myFunc,fnode = new FunctionNode(), par;
  if(ancestor != null)
        par = ancestor;
  else
        par = fnode;
  fnode.setAncestor(par);
  Token t;
  ExpressionNode enode;
  AbstractTreeNode n;
    jj_consume_token(FUNCTION);
    jj_consume_token(LP);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case DATA:
      t = jj_consume_token(DATA);
                fnode.getParTypes().add(t.image);
      t = jj_consume_token(VAR);
      fnode.getParIds().add(t.image);
      label_2:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 42:
          ;
          break;
        default:
          jj_la1[2] = jj_gen;
          break label_2;
        }
        jj_consume_token(42);
        t = jj_consume_token(DATA);
                fnode.getParTypes().add(t.image);
        t = jj_consume_token(VAR);
        fnode.getParIds().add(t.image);
      }
      break;
    default:
      jj_la1[3] = jj_gen;
      ;
    }
    jj_consume_token(RP);
    jj_consume_token(WRITE);
    t = jj_consume_token(VAR);
    fnode.setFunctionId(t.image);
    jj_consume_token(COLON);
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case FLOOP:
      case WLOOP:
      case FUNCTION:
      case DEF:
      case VAR:
      case IF:
      case READ:
      case WRITE:
        ;
        break;
      default:
        jj_la1[4] = jj_gen;
        break label_3;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case FUNCTION:
        myFunc = Func(par);
                fnode.addFunction(myFunc);
                myFunc.setAncestor(par);
        break;
      case FLOOP:
      case WLOOP:
      case DEF:
      case VAR:
      case IF:
      case READ:
      case WRITE:
        n = Statement();
      fnode.addChild(n);
        break;
      default:
        jj_la1[5] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    jj_consume_token(END);
    {if (true) return fnode;}
    throw new Error("Missing return statement in function");
  }

  static final public FunctionCallNode CAllFUNCTION() throws ParseException {
  FunctionCallNode enode = new FunctionCallNode();
  AbstractTreeNode n, s;
  Token t;
    t = jj_consume_token(VAR);
    jj_consume_token(LP);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case NUM:
    case LP:
    case DOUBLE:
    case VAR:
    case STRING:
    case CHAR:
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case NUM:
      case LP:
      case DOUBLE:
      case VAR:
        n = E();
        break;
      case STRING:
        n = Strings();
        break;
      case CHAR:
        n = Chars();
        break;
      default:
        jj_la1[6] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      enode.addChild(n);
      label_4:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 42:
          ;
          break;
        default:
          jj_la1[7] = jj_gen;
          break label_4;
        }
        jj_consume_token(42);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case NUM:
        case LP:
        case DOUBLE:
        case VAR:
          n = E();
          break;
        case STRING:
          n = Strings();
          break;
        case CHAR:
          n = Chars();
          break;
        default:
          jj_la1[8] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        enode.addChild(n);
      }
      break;
    default:
      jj_la1[9] = jj_gen;
      ;
    }
    jj_consume_token(RP);
    enode.setOperation(t.image);
    {if (true) return enode;}
    throw new Error("Missing return statement in function");
  }

  static final public ExpressionNode E() throws ParseException {
  ExpressionNode enode = new ExpressionNode();
  ExpressionNode node1;
  ExpressionNode node2 = null;
  Token t = new Token();
    node1 = F();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case PLUS:
      t = jj_consume_token(PLUS);
      node2 = E();
      break;
    default:
      jj_la1[10] = jj_gen;
      ;
    }
    enode.setOperation(t.image);
    enode.addChild(node1);
    if (node2 != null)
    {
      enode.addChild(node2);
      {if (true) return enode;}
    }
    else
    {if (true) return node1;}
    throw new Error("Missing return statement in function");
  }

  static final public ExpressionNode F() throws ParseException {
  ExpressionNode fnode = new ExpressionNode();
  ExpressionNode node1;
  ExpressionNode node2 = null;
  Token t = new Token();
    node1 = Exp();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case MULTIPLY:
      t = jj_consume_token(MULTIPLY);
      node2 = F();
      break;
    default:
      jj_la1[11] = jj_gen;
      ;
    }
    fnode.setOperation(t.image);
    fnode.addChild(node1);
    if (node2 != null)
    {
      fnode.addChild(node2);
      {if (true) return fnode;}
    }
    else
    {if (true) return node1;}
    throw new Error("Missing return statement in function");
  }

  static final public ExpressionNode Exp() throws ParseException {
  ExpressionNode expnode = new ExpressionNode();
  ExpressionNode node1;
  ExpressionNode node2 = null;
  Token t = new Token();
    node1 = N();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case POWER:
      t = jj_consume_token(POWER);
      node2 = Exp();
      break;
    default:
      jj_la1[12] = jj_gen;
      ;
    }
    expnode.setOperation(t.image);
    expnode.addChild(node1);
    if (node2 != null)
    {
      expnode.addChild(node2);
      {if (true) return expnode;}
    }
    else
    {if (true) return node1;}
    throw new Error("Missing return statement in function");
  }

  static final public ExpressionNode N() throws ParseException {
  ExpressionNode enode = new ExpressionNode();
  ExpressionNode node1 = null;
  ConstantNode conNode = null;
  VariableNode varNode = null;
  Token t = new Token();
    if (jj_2_1(2)) {
      node1 = CAllFUNCTION();
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case DOUBLE:
        t = jj_consume_token(DOUBLE);
      conNode = new ConstantNode();
      conNode.setValue(t.image);
        break;
      case VAR:
        t = jj_consume_token(VAR);
      varNode = new VariableNode();
      varNode.setVarId(t.image);
        break;
      case NUM:
        t = jj_consume_token(NUM);
      conNode = new ConstantNode();
      conNode.setValue(t.image);
        break;
      case LP:
        jj_consume_token(LP);
        node1 = E();
        jj_consume_token(RP);
        break;
      default:
        jj_la1[13] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    if (node1 != null)
    {
      {if (true) return node1;}
    }
    else
    if (varNode != null)
    {if (true) return varNode;}
    else
    {if (true) return conNode;}
    throw new Error("Missing return statement in function");
  }

  static final public ForNode For() throws ParseException {
  Token t = new Token();
  ForNode fnode = new ForNode();
  ExpressionNode enode1, enode2, enode3;
  enode3 = new ConstantNode(1);
  BlockNode bnode = new BlockNode();
  AbstractTreeNode n;
    jj_consume_token(FLOOP);
    t = jj_consume_token(VAR);
    jj_consume_token(COLON);
    enode1 = E();
    jj_consume_token(WRITE);
    enode2 = E();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case COLON:
      jj_consume_token(COLON);
      enode3 = E();
      break;
    default:
      jj_la1[14] = jj_gen;
      ;
    }
    label_5:
    while (true) {
      n = Statement();
      bnode.addChild(n);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case FLOOP:
      case WLOOP:
      case DEF:
      case VAR:
      case IF:
      case READ:
      case WRITE:
        ;
        break;
      default:
        jj_la1[15] = jj_gen;
        break label_5;
      }
    }
    jj_consume_token(END);
    fnode.setVarName(t.image);
    fnode.addChild(enode1);
    fnode.addChild(enode2);
    fnode.addChild(enode3);
    fnode.addChild(bnode);
    {if (true) return fnode;}
    throw new Error("Missing return statement in function");
  }

  static final public ConditionNode Or() throws ParseException {
  Token t = new Token();
  ConditionNode cnode1 ,cnode2 = null;
  OrNode node = new OrNode();
    cnode1 = And();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case OR:
      jj_consume_token(OR);
      cnode2 = Or();
      break;
    default:
      jj_la1[16] = jj_gen;
      ;
    }
    if(cnode2 != null) {
        node.addChild(cnode1);
            node.addChild(cnode2);
                 {if (true) return node;}
        }
        else
                {if (true) return cnode1;}
    throw new Error("Missing return statement in function");
  }

  static final public ConditionNode And() throws ParseException {
  Token t = new Token();
  ConditionNode cnode1 ,cnode2 = null;
  AndNode node = new AndNode();
    cnode1 = Not();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case AND:
      jj_consume_token(AND);
      cnode2 = And();
      break;
    default:
      jj_la1[17] = jj_gen;
      ;
    }
    if(cnode2 != null) {
        node.addChild(cnode1);
            node.addChild(cnode2);
                 {if (true) return node;}
        }
        else
                {if (true) return cnode1;}
    throw new Error("Missing return statement in function");
  }

  static final public ConditionNode Not() throws ParseException {
  Token t = null;
  ConditionNode cnode1 ,cnode2 = null;
  NotNode node = new NotNode();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case NOT:
      t = jj_consume_token(NOT);
      break;
    default:
      jj_la1[18] = jj_gen;
      ;
    }
    cnode1 = Condition();
    if(t != null) {
        node.addChild(cnode1);
                {if (true) return node;}
        }
        else
                {if (true) return cnode1;}
    throw new Error("Missing return statement in function");
  }

  static final public ConditionNode Condition() throws ParseException {
  Token t = new Token();
  ConditionNode cnode = new ConditionNode();
  ConditionNode node1 = null;
  ExpressionNode enode1 = null;
  ExpressionNode enode2 = null;
    if (jj_2_2(3)) {
      jj_consume_token(LP);
      node1 = Or();
      jj_consume_token(RP);
    } else if (jj_2_3(3)) {
      enode1 = E();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case EQ:
        t = jj_consume_token(EQ);
        break;
      case LT:
        t = jj_consume_token(LT);
        break;
      case GT:
        t = jj_consume_token(GT);
        break;
      case LET:
        t = jj_consume_token(LET);
        break;
      case GET:
        t = jj_consume_token(GET);
        break;
      case NEQ:
        t = jj_consume_token(NEQ);
        break;
      default:
        jj_la1[19] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      enode2 = E();
    } else if (jj_2_4(3)) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case STRING:
        enode1 = Strings();
        break;
      case VAR:
        t = jj_consume_token(VAR);
                        enode1 = new VariableNode(t.image);
        break;
      default:
        jj_la1[20] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case EQ:
        t = jj_consume_token(EQ);
        break;
      case NEQ:
        t = jj_consume_token(NEQ);
        break;
      default:
        jj_la1[21] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case STRING:
        enode2 = Strings();
        break;
      case VAR:
        t = jj_consume_token(VAR);
                        enode2 = new VariableNode(t.image);
        break;
      default:
        jj_la1[22] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } else if (jj_2_5(3)) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CHAR:
        enode1 = Chars();
        break;
      case VAR:
        t = jj_consume_token(VAR);
                        enode1 = new VariableNode(t.image);
        break;
      default:
        jj_la1[23] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case EQ:
        t = jj_consume_token(EQ);
        break;
      case NEQ:
        t = jj_consume_token(NEQ);
        break;
      default:
        jj_la1[24] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CHAR:
        enode2 = Chars();
        break;
      case VAR:
        t = jj_consume_token(VAR);
                        enode2 = new VariableNode(t.image);
        break;
      default:
        jj_la1[25] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    if(node1 != null)
        {if (true) return node1;}
    cnode.setOperation(t.image);
    cnode.addChild(enode1);
    cnode.addChild(enode2);
    {if (true) return cnode;}
    throw new Error("Missing return statement in function");
  }

  static final public WhileNode While() throws ParseException {
  WhileNode wnode = new WhileNode();
  BlockNode bnode = new BlockNode();
  AbstractTreeNode n, s;
    jj_consume_token(WLOOP);
    jj_consume_token(LP);
    n = Or();
    jj_consume_token(RP);
    label_6:
    while (true) {
      s = Statement();
      bnode.addChild(s);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case FLOOP:
      case WLOOP:
      case DEF:
      case VAR:
      case IF:
      case READ:
      case WRITE:
        ;
        break;
      default:
        jj_la1[26] = jj_gen;
        break label_6;
      }
    }
    jj_consume_token(END);
    wnode.addChild(n);
    wnode.addChild(bnode);
    {if (true) return wnode;}
    throw new Error("Missing return statement in function");
  }

  static final public IfNode IF() throws ParseException {
  Token t = new Token();
  IfNode ifNode = new IfNode();
  ElseNode enode = new ElseNode();
  ConditionNode cnode;
  BlockNode bnode1 = new BlockNode();
  BlockNode bnode2 = null;
  AbstractTreeNode n;
    t = jj_consume_token(IF);
    jj_consume_token(LP);
    cnode = Or();
    jj_consume_token(RP);
    label_7:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case FLOOP:
      case WLOOP:
      case DEF:
      case VAR:
      case IF:
      case READ:
      case WRITE:
        ;
        break;
      default:
        jj_la1[27] = jj_gen;
        break label_7;
      }
      n = Statement();
      bnode1.addChild(n);
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ELSE:
      jj_consume_token(ELSE);
      bnode2 = new BlockNode();
      label_8:
      while (true) {
        n = Statement();
        bnode2.addChild(n);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case FLOOP:
        case WLOOP:
        case DEF:
        case VAR:
        case IF:
        case READ:
        case WRITE:
          ;
          break;
        default:
          jj_la1[28] = jj_gen;
          break label_8;
        }
      }
      enode.addChild(bnode2);
      break;
    default:
      jj_la1[29] = jj_gen;
      ;
    }
    jj_consume_token(END);
    ifNode.addChild(cnode);
    ifNode.addChild(bnode1);
    if (bnode2 != null)
    ifNode.addChild(enode);
    {if (true) return ifNode;}
    throw new Error("Missing return statement in function");
  }

  static final public StringNode Strings() throws ParseException {
  Token t;
    t = jj_consume_token(STRING);
    {if (true) return new StringNode(t.image);}
    throw new Error("Missing return statement in function");
  }

  static final public CharNode Chars() throws ParseException {
  Token t;
    t = jj_consume_token(CHAR);
    {if (true) return new CharNode(t.image);}
    throw new Error("Missing return statement in function");
  }

  static final public AssignmentNode Assignment() throws ParseException {
  Token t = null, t1 = null;
  AssignmentNode anode = new AssignmentNode();
  AbstractTreeNode n = null;
    t = jj_consume_token(VAR);
    t1 = jj_consume_token(assignment);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case NUM:
    case LP:
    case DOUBLE:
    case VAR:
      n = E();
      break;
    case STRING:
      n = Strings();
      break;
    case CHAR:
      n = Chars();
      break;
    default:
      jj_la1[30] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    anode.setvarId(t.image);
    anode.setOperation(t1.image);
    anode.addChild(n);
    {if (true) return anode;}
    throw new Error("Missing return statement in function");
  }

  static final public ReadNode Read() throws ParseException {
  ReadNode n = new ReadNode();
  Token t;
    jj_consume_token(READ);
    t = jj_consume_token(VAR);
    n.setVarName(t.image);
    {if (true) return n;}
    throw new Error("Missing return statement in function");
  }

  static final public WriteNode Write() throws ParseException {
  WriteNode wnode = new WriteNode();
  ExpressionNode enode;
    jj_consume_token(WRITE);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case NUM:
    case LP:
    case DOUBLE:
    case VAR:
      enode = E();
      break;
    case STRING:
      enode = Strings();
      break;
    case CHAR:
      enode = Chars();
      break;
    default:
      jj_la1[31] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    wnode.addChild(enode);
    {if (true) return wnode;}
    throw new Error("Missing return statement in function");
  }

  static final public AbstractTreeNode Statement() throws ParseException {
  AbstractTreeNode n = null;
    if (jj_2_6(2)) {
      n = CAllFUNCTION();
      jj_consume_token(SIMICOLON);
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case VAR:
        n = Assignment();
        jj_consume_token(SIMICOLON);
        break;
      case IF:
        n = IF();
        break;
      case WLOOP:
        n = While();
        break;
      case READ:
        n = Read();
        jj_consume_token(SIMICOLON);
        break;
      case WRITE:
        n = Write();
        jj_consume_token(SIMICOLON);
        break;
      case FLOOP:
        n = For();
        break;
      case DEF:
        n = def();
        jj_consume_token(SIMICOLON);
        break;
      default:
        jj_la1[32] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    {if (true) return n;}
    throw new Error("Missing return statement in function");
  }
